<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_report"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_report_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/cv_round"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">


        <LinearLayout
            android:id="@+id/ll_report_status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/ll_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/ic_round_calendar_today_24" />

                <TextView
                    android:id="@+id/tv_status_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cabin"
                    android:gravity="end"
                    android:padding="5dp"
                    android:text="@string/_1_1_2021"
                    android:textColor="#F44336"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_title_cat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/cabin"
                android:text="@string/category" />

            <TextView
                android:id="@+id/tv_status_cat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:fontFamily="@font/cabin"
                android:gravity="start"
                android:text="@string/water_leaks"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title_division"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:fontFamily="@font/cabin"
                        android:text="@string/division_of_reported_matter" />

                    <TextView
                        android:id="@+id/tv_status_division"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="7dp"
                        android:fontFamily="@font/cabin"
                        android:gravity="start"
                        android:text="@string/miri"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:gravity="right"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title_district"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:fontFamily="@font/cabin"
                        android:text="@string/district_of_reported_matter" />

                    <TextView
                        android:id="@+id/tv_status_district"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="7dp"
                        android:fontFamily="@font/cabin"
                        android:gravity="start"
                        android:text="Beluru"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_title_remark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/cabin"
                android:text="@string/message" />

            <TextView
                android:id="@+id/tv_status_remark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="7dp"
                android:fontFamily="@font/cabin"
                android:gravity="center|start"
                android:text="@string/none"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:text="Status" />

            <TextView
                android:id="@+id/tv_pending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin_bold"
                android:text="PENDING"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                style=""
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp">

                <Button
                    android:id="@+id/btn_delete"
                    style="?buttonBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="20dp"
                    android:backgroundTint="@color/system_lighter_blue"
                    android:fontFamily="@font/cabin"
                    android:text="@string/delete"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#FFFFFF"
                    app:cornerRadius="@dimen/btn_dimen" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>