<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/transparent"
    android:backgroundTint="@color/system_blue"
    android:backgroundTintMode="screen"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity">

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:fontFamily="@font/cabin_bold"
            android:gravity="bottom|center"
            android:paddingBottom="20dp"
            android:text="@string/login_login"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="30dp"
            android:autofillHints=""
            android:background="@drawable/et_login_box"
            android:fontFamily="@font/cabin"
            android:foregroundGravity="center_horizontal"
            android:hint="@string/enter_email_address"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/system_lighter_blue"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:expandedHintEnabled="true"
            app:hintEnabled="false"
            app:passwordToggleContentDescription="Show password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/system_lighter_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:autofillHints=""
                android:background="@drawable/et_login_box"
                android:fontFamily="@font/cabin"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/system_lighter_blue"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_login_email"
                app:layout_constraintVertical_bias="0.023" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_forgot_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/cabin_bold"
            android:gravity="end"
            android:text="@string/forgot_password"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView

            android:id="@+id/tv_not_registered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:clickable="true"
            android:fontFamily="@font/cabin_bold"
            android:text="@string/not_registered_create_account_here"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_login_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll_login"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button

            android:id="@+id/btn_login"
            style="?attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:background="@color/system_dark_blue"
            android:fontFamily="@font/cabin_bold"
            android:padding="20dp"
            android:text="@string/login"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>


</RelativeLayout>
