<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fyp"
    android:backgroundTintMode="src_atop"
    tools:context=".ui.MainPageActivity">

    <TextView
        android:id="@+id/tv_announce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_main"
        android:fontFamily="@font/cabin"
        android:gravity="center"
        android:text="@string/announcements"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/linear_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_form"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            app:cardBackgroundColor="@color/system_blue"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp">

            <TextView
                android:id="@+id/tv_report_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/system_blue"
                android:fontFamily="@font/cabin_bold"
                android:gravity="center"
                android:text="@string/report_leakage"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_status"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:elevation="5dp"
            app:cardBackgroundColor="@color/system_blue"
            app:cardCornerRadius="15dp">

            <TextView
                android:id="@+id/tv_report_status"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/cabin_bold"
                android:gravity="center"
                android:text="@string/report_status"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_announce"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        tools:listitem="@layout/item_news">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:contentDescription="@string/todo"
        app:backgroundTint="@color/system_dark_blue"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_baseline_message_white"
        tools:ignore="RelativeOverlap" />


</RelativeLayout>